# docs/swagger.json
@@ -96,204 +96,6 @@
                 }
             }
         },
-        "/users/profiles": {
-            "post": {
-                "description": "Add new profile for a user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Management"
-                ],
-                "summary": "Add new profile for a user",
-                "parameters": [
-                    {
-                        "description": "Profile details",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.Profile"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "New profile added for user",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{ID}/account": {
-            "put": {
-                "description": "Update user's account information with the given ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Management"
-                ],
-                "summary": "Update user's account information",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "ID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Account details",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.UpdateAccount"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "User's account information updated",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Record not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{ID}/assign-role": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Management"
-                ],
-                "summary": "Assign role to a user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "ID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Role details",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.AssignRole"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Role assigned to user",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "User Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{ID}/assign-role-application": {
-            "post": {
-                "description": "Assign role application to a user's account with the given ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Management"
-                ],
-                "summary": "Assign role application to a user's account",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "ID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Role Application details",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.AssignRoleApplication"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Role Application assigned to user's account",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "User Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/users/{ID}/profiles": {
             "get": {
                 "consumes": [
@@ -338,28 +140,6 @@
         }
     },
     "definitions": {
-        "schema.AssignRole": {
-            "type": "object",
-            "properties": {
-                "role": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "schema.AssignRoleApplication": {
-            "type": "object",
-            "properties": {
-                "role_application": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "schema.Login": {
             "type": "object",
             "required": [
@@ -375,9 +155,6 @@
                 }
             }
         },
-        "schema.Profile": {
-            "type": "object"
-        },
         "schema.Register": {
             "type": "object",
             "required": [
@@ -387,9 +164,6 @@
                 "username"
             ],
             "properties": {
-                "application_id": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -403,14 +177,6 @@
                     }
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "schema.UpdateAccount": {
-            "type": "object",
-            "properties": {
-                "application_id": {
                     "type": "string"
                 }
             }
