# schema/Account.go
@@ -7,15 +7,13 @@ import (
 )
 
 type Account struct {
-	Id               string `json:"id" gorm:"primaryKey;size:50;"`
-	UserId           string `json:"user_id"`
-	ApplicationId    string `json:"application_id"`
-	CreatedAt        time.Time
-	UpdatedAt        time.Time
-	DeletedAt        gorm.DeletedAt
-	IsDeleted        bool              `gorm:"type:bool;default:false" json:"delete"`
-	IsActive         bool              `gorm:"type:bool;default:true" json:"status"`
-	RoleApplications []RoleApplication `gorm:"many2many:account_role_applications;"`
+	Id        string `json:"id" gorm:"primaryKey;size:50;"`
+	UserId    string `json:"user_id"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	DeletedAt gorm.DeletedAt
+	IsDeleted bool `gorm:"type:bool;default:false" json:"delete"`
+	IsActive  bool `gorm:"type:bool;default:true" json:"status"`
 }
 
 func (Account) TableName() string {
@@ -24,8 +22,4 @@ func (Account) TableName() string {
 
 type AssignRoleApplication struct {
 	RoleApplication []string `json:"role_application"`
-}
-
-type UpdateAccount struct {
-	ApplicationId string `json:"application_id"`
 }
